--- a/src/main/java/dealership/ui/ConfirmSaleDialog.form
+++ b/src/main/java/dealership/ui/ConfirmSaleDialog.form
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value=" Finalize Sale"/>
+    <Property name="title" type="java.lang.String" value="\ud83d\ude97 Finalize Sale" containsInvalidXMLChars="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
