--- a/src/main/java/dealership/ui/CreateSaleFrame.form
+++ b/src/main/java/dealership/ui/CreateSaleFrame.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
-<Form version="1.3" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+<Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
     <Container class="javax.swing.JPanel" name="mainPanel">
 
@@ -20,7 +20,7 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
-    <Property name="title" type="java.lang.String" value="Start New Sale"/>
+    <Property name="title" type="java.lang.String" value="\ud83d\ude97 Start New Sale" containsInvalidXMLChars="true"/>
     <Property name="alwaysOnTop" type="boolean" value="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
@@ -74,9 +74,9 @@
                   <Component id="panelEmployees" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="submitButton" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
-                  <Component id="cancelButton" alignment="3" min="-2" pref="35" max="-2" attributes="0"/>
+                  <Component id="cancelButton" min="-2" pref="35" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
