--- a/src/main/java/dealership/ui/LoginFrame.form
+++ b/src/main/java/dealership/ui/LoginFrame.form
@@ -2,7 +2,7 @@
 
 <Form version="1.8" maxVersion="1.9" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
-    <Property name="title" type="java.lang.String" value="\ud83d\ude97 Car Dealership" containsInvalidXMLChars="true"/>
+    <Property name="title" type="java.lang.String" value="\ud83d\ude97 Log In" containsInvalidXMLChars="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
   <SyntheticProperties>
