Update tax label

--- a/src/main/java/dealership/ui/ConfirmSaleDialog.form
+++ b/src/main/java/dealership/ui/ConfirmSaleDialog.form
@@ -249,8 +249,12 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Tax"/>
+            <Property name="text" type="java.lang.String" value="Tax (10%)"/>
           </Properties>
+          <AccessibilityProperties>
+            <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="Tax (10%)"/>
+            <Property name="AccessibleContext.accessibleDescription" type="java.lang.String" value=""/>
+          </AccessibilityProperties>
         </Component>
         <Component class="javax.swing.JTextField" name="textTotal">
           <Properties>
